fixed errors link to w3c

--- a/html/index.html
+++ b/html/index.html
@@ -8,14 +8,14 @@
     <title>Everyday life</title>
     <link rel="stylesheet" href="../css/index.css">
     <link class="tabIcon" rel="icon" type="image/x-icon" href="../image/logo.png">
-</head> 
+</head>
 
 
 <body>
     <header>
         <nav>
-            <ul class="navList">
-                <img class="navLogoImage" src="../image/logo.png">
+            <ul class="navList"> <!-- Navigation bar with logo and links -->
+                <li><img class="navLogoImage" src="../image/logo.png" alt="EverydayLife logo"></li>
                 <li><a class="NavText" href="index.html">Home</a></li>
                 <li><a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a></li>
                 <li><a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a></li>
@@ -43,13 +43,13 @@
 
             <div class="left-student">
                 <a href="../html/about.html">
-                    <img src="../image/etudiant_bonhomme_baton.png"><br>
+                    <img src="../image/etudiant_bonhomme_baton.png" alt="Stickman student image"><br>
                 </a>
             </div>
 
             <div class="right-student">
                 <a href="../html/about.html">
-                    <img src="../image/etudiant_bonhomme_baton - Copie.png"><br>
+                    <img src="../image/etudiant_bonhomme_baton_inverted.png" alt="Stickman student image inverted">
                 </a>
             </div>
 
@@ -67,7 +67,7 @@
                             </a>
                             <div id="info-box-A1" class="pin-info-box">
                                 <a href="../html/Animals_and_Quiz/DevilsHolePupFish.html">
-                                    <img src="../image/Animals/Devils_hole_pupfish.png">
+                                    <img src="../image/Animals/Devils_hole_pupfish.png" alt="Devils Hole Pupfish">
                                 </a>
 
                             </div>
@@ -79,7 +79,7 @@
                             </a>
                             <div id="info-box-A2" class="pin-info-box">
                                 <a href="../html/Animals_and_Quiz/MandarinFish.html">
-                                    <img src="../image/Animals/Dragonet_mandarin.png">
+                                    <img src="../image/Animals/Dragonet_mandarin.png" alt="Mandarin Fish">
                                 </a>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
                             </a>
                             <div id="info-box-A3" class="pin-info-box">
                                 <a href="Animals_and_Quiz/pandido.html">
-                                    <img src="../image/Animals/pandido.jpg"><br>
+                                    <img src="../image/Animals/pandido.jpg" alt="Pandido image">
                                 </a>
                             </div>
                         </div>
@@ -102,7 +102,8 @@
 
                             <div id="info-box-A4" class="pin-info-box">
                                 <a href="Animals_and_Quiz/turtle.html">
-                                    <img src="../image/Animals/Roti-Island-snake-necked-turtle.png"><br>
+                                    <img src="../image/Animals/Roti-Island-snake-necked-turtle.png"
+                                        alt="snake necked turtle"><br>
                                 </a>
                             </div>
                         </div>
