fixed about page and added comments

--- a/html/about.html
+++ b/html/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<head>
+<head> <!-- Document type declaration for HTML5 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Everyday life</title>
@@ -12,10 +12,10 @@
 
 
 <body>
-    <header>
-        <nav>
-            <ul class="navList">
-                <img class="navLogoImage" src="../image/logo.png">
+    <header> <!-- Header section with navigation bar -->
+        <nav> <!-- Navigation bar with logo and links -->
+            <ul class="navList"> <!-- Navigation list -->
+                <li><img class="navLogoImage" src="../image/logo.png" alt="EverydayLife logo"></li>
                 <li><a class="NavText" href="../html/index.html">Home</a></li>
                 <li><a class="NavText" href="../html/Animals_and_Quiz/SeaLife.html">Sea life</a></li>
                 <li><a class="NavText" href="../html/Animals_and_Quiz/EarthLife.html">Earth life</a></li>
@@ -24,8 +24,8 @@
     </header>
 
 
-    <main>
-        <section class="intro">
+    <main> <!-- Main content area -->
+        <section class="intro"> <!-- Introduction section -->
             <h1>About this project</h1>
             <p>
                 This page introduces the team members behind the project, the roles each played, and our final thought
@@ -33,11 +33,11 @@
             </p>
         </section>
 
-        <section class="team-section">
+        <section class="team-section"> <!-- Team section -->
             <h2>The team behind this website</h2>
 
-            <div class="team-cards">
-                <div class="team-card">
+            <div class="team-cards"> <!-- Container for team member cards -->
+                <div class="team-card"> <!-- Individual team member card -->
                     <img id="lelia" src="../image/lelia.jpg" alt="Lélia GHEZALI">
                     <h3 id="lelia_h3">Lélia GHEZALI</h3>
                     <p><strong>Role:</strong> I was in charge of making the Earth life and Sea life pages. I also made
@@ -47,7 +47,7 @@
                         as it allowed creativity but still thaught me a lot about endengered animals. </p>
                 </div>
 
-                <div class="team-card">
+                <div class="team-card"> <!-- Individual team member card -->
                     <img id="killian" src="../image/Killian.jpg" alt="Killian KOULOURATH">
                     <h3 id="killian_h3">Killian KOULOURATH</h3>
                     <p><strong>Role:</strong> I was in charge of making the home page which was kind of difficult. I
@@ -60,9 +60,9 @@
             </div>
         </section>
 
-        <section class="closing">
-            <h2>Final thoughts</h2>
-            <p>
+        <section class="closing"> <!-- Closing section -->
+            <h2>Final thoughts</h2> <!-- Section title -->
+            <p> <!-- Paragraph with final thoughts -->
                 We are quite proud of what we accomplished together for this project and are grateful for the
                 opportunity to create this website by ourselves from
                 scratch. Thanks to it, we were taught valuable technical and teamwork skills that we know will be useful
