--- a/html/Animals_and_Quiz/DevilsHolePupFish.html
+++ b/html/Animals_and_Quiz/DevilsHolePupFish.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devils hole pupfish</title>
-    <link rel="stylesheet" href="../../css/Animals_and_Quiz/SeaAnimals.css" />
-    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png" />
+    <link rel="stylesheet" href="../../css/Animals_and_Quiz/SeaAnimals.css">
+    <link class="tabIcon" rel="icon" type="image/x-icon" href="../../image/logo.png">
 </head>
 
 <body>
     <header>
         <nav>
             <ul class="navList">
-                <img class="navLogoImage" src="../../image/logo.png" />
+                <li><img class="navLogoImage" src="../../image/logo.png" alt="EverydayLife logo"></li>
                 <li><a class="NavText" href="../index.html">Home</a></li>
                 <li><a class="NavText" href="../Animals_and_Quiz/SeaLife.html">Sea life</a></li>
                 <li><a class="NavText" href="EarthLife.html">Earth life</a></li>
@@ -26,9 +26,11 @@
             <h1>The devils hole pupfish</h1>
 
             <div class="video-container">
-                <video controls width="100%">
-                    <source src="../../videos/Devils hole pupfish.mp4" type="video/mp4" alt="Devils hole pupfish video">
+                <video controls style="width: 100%;">
+                    <source src="../../videos/Devils_hole_pupfish.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
                 </video>
+
             </div>
 
             <div class="audio-container">
