--- a/html/Animals_and_Quiz/DevilsHolePupFish.html
+++ b/html/Animals_and_Quiz/DevilsHolePupFish.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="navList">
+    <header> <!-- Header section with navigation bar -->
+        <nav> <!-- Navigation bar -->
+            <ul class="navList"> <!-- List of navigation links -->
                 <li><img class="navLogoImage" src="../../image/logo.png" alt="EverydayLife logo"></li>
                 <li><a class="NavText" href="../index.html">Home</a></li>
                 <li><a class="NavText" href="../Animals_and_Quiz/SeaLife.html">Sea life</a></li>
@@ -21,28 +21,26 @@
         </nav>
     </header>
 
-    <main>
-        <div class="container">
-            <h1>The devils hole pupfish</h1>
+    <main> <!-- Main content area -->
+        <div class="container"> <!-- Container for the content -->
+            <h1>The devils hole pupfish</h1> <!-- Main title of the page -->
 
-            <div class="video-container">
-                <video controls style="width: 100%;">
-                    <source src="../../videos/Devils_hole_pupfish.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
+            <div class="video-container"> <!-- Container for the video -->
+                <video controls style="width: 100%;"> <!-- Video player with controls -->
+                    <source src="../../videos/Devils_hole_pupfish.mp4" type="video/mp4"> <!-- Source of the video -->
                 </video>
 
             </div>
 
-            <div class="audio-container">
+            <div class="audio-container"> <!-- Container for the audio -->
                 <h2>What sound does the devils hole pupfish make ?</h2>
                 <audio controls>
-                    <source src="../../audios/devils hole pupfish.mp3" type="audio/mpeg"
-                        alt="Devils hole pupfish audio">
+                    <source src="../../audios/devils_hole_pupfish.mp3" type="audio/mpeg">
                 </audio>
             </div>
 
-            <div class="articles">
-                <div class="article">
+            <div class="articles"> <!-- Container for articles -->
+                <div class="article"> <!-- First article -->
                     <h2>The Devils Hole pupfish: A tiny survivor in a fragile world</h2>
                     <p>
                         The Devils Hole pupfish (Cyprinodon diabolis) is one of the rarest and most geographically
@@ -52,7 +50,7 @@
                     </p><br>
 
                     <ul>
-                        <li><strong>Physical appearance:</strong>
+                        <li><strong>Physical appearance:</strong> 
                             <p>
                                 Measuring less than 2.5 centimeters (1 inch) long, the Devils Hole pupfish is a small,
                                 iridescent-blue fish with a short, stocky body and large eyes. Males display a brighter,
@@ -61,7 +59,7 @@
                                 in hue. Despite their modest appearance, their rarity makes them biologically and
                                 scientifically significant.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li><strong>Habitat and behavior:</strong>
                             <p>
@@ -71,7 +69,7 @@
                                 pool
                                 for feeding and spawning, where algae grow and provide their primary food source.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li><strong>Reproduction and social life:</strong>
                             <p>
@@ -81,7 +79,7 @@
                                 with
                                 slower metabolism and a high tolerance for heat and low oxygen.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li><strong>Conservation status:</strong>
                             <p>
@@ -93,11 +91,11 @@
                                 management are
                                 ongoing to ensure the species’ survival.
                             </p>
-                        </li><br>
+                        </li>
                     </ul>
 
 
-                    <strong>Conclusion:</strong>
+                    <strong>Conclusion:</strong> 
                     <p>
                         Though small in size, the Devils Hole pupfish plays a big role in the story of conservation.
                         Protecting this extraordinary species means preserving a one-of-a-kind habitat and reminding
@@ -109,14 +107,14 @@
 
                 </div>
 
-                <div class="article">
+                <div class="article"> <!-- Second article -->
                     <h2>Protecting the Devils Hole pupfish: How can we help</h2>
                     <p>
                         The Devils Hole pupfish may be one of the most endangered fish species in the world, but with
                         the right actions, we can contribute to its survival. This remarkable species depends on a
                         single, fragile habitat, and protecting it requires dedication, awareness, and long-term
                         commitment.
-                    </p><br>
+                    </p>
 
                     <ol>
                         <li><strong>Preserve groundwater resources:</strong>
@@ -126,7 +124,7 @@
                                 only habitat. Supporting sustainable water use policies and advocating for aquifer
                                 protection helps safeguard their environment.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Support conservation programs:</strong>
@@ -137,7 +135,7 @@
                                 on
                                 desert ecology or endangered species protection contributes to these vital initiatives.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Respect protected areas:</strong>
@@ -148,7 +146,7 @@
                                 disturbances
                                 can have major impacts on this delicate ecosystem.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Educate and inform others:</strong>
@@ -157,7 +155,7 @@
                                 biodiversity and habitat conservation. Sharing their story, especially their fight for
                                 survival against the odds, can inspire support for other species at risk.
                             </p>
-                        </li><br>
+                        </li>
 
                         <li>
                             <strong>Promote responsible environmental choices:</strong>
@@ -168,9 +166,9 @@
                                 all
                                 contribute to a healthier planet and more secure habitats for species like the pupfish.
                             </p>
-                        </li><br>
+                        </li>
                     </ol>
-                    <strong>Conclusion:</strong>
+                    <strong>Conclusion:</strong> 
                     <p>
                         Saving the Devils Hole pupfish is a shared responsibility. By preserving their habitat,
                         supporting
@@ -198,7 +196,7 @@
             <a class="NavText" href="../about.html">About</a>
         </div>
         <div class="footer-right">
-            <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo" />
+            <img id="logoEfrei" src="../../image/LOGO_EFREI-WEB_blanc.png" alt="Efrei Paris logo">
         </div>
     </footer>
 
